--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #0ee746; }
+  background: #39c9c2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #144a8a; }
+  background: #9d942c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e71e4f; }
+  background: #258284; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #09b533; }
+  background: #bd8c26; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #49435c; }
+  background: #6e60d6; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e87aae; }
+  background: #a05881; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #3bf55f; }
+  background: #2532c6; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4caaf0; }
+  background: #3da7ad; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #175e7c; }
+  background: #518b5a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #3747f3; }
+  background: #747ad0; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9d713c; }
+  background: #c615b7; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #463a39; }
+  background: #0af3c7; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ccd665; }
+  background: #9ce330; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8fa89b; }
+  background: #4d45e9; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5c3746; }
+  background: #2f1e27; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ece5e5; }
+  background: #adfd4e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a560b0; }
+  background: #f82c1b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d63c24; }
+  background: #665be6; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #1b4983; }
+  background: #793863; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #91c68d; }
+  background: #e59acc; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9f59e4; }
+  background: #fd1641; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #c29ea6; }
+  background: #eb3ded; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #134a87; }
+  background: #49f936; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b5b148; }
+  background: #ca956e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b762c7; }
+  background: #906f9d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3250b3; }
+  background: #d9ef6c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d3ebd0; }
+  background: #3279e1; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b6d26c; }
+  background: #6e394c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #362b2f; }
+  background: #9e0d65; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c27ad4; }
+  background: #3d8bba; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b1710c; }
+  background: #2e5926; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #b6f7a0; }
+  background: #ce38ac; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #bcedcf; }
+  background: #422975; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #95f4f2; }
+  background: #605bec; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #bec3d7; }
+  background: #e09186; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f66bc0; }
+  background: #cab52b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2bda9c; }
+  background: #410401; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #fe2bb4; }
+  background: #5d63cd; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #72ddaf; }
+  background: #2de56f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4d4120; }
+  background: #a74c36; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f2221e; }
+  background: #cf890e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b39fa2; }
+  background: #e18240; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d39df8; }
+  background: #5ff1cc; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #eae2bd; }
+  background: #031771; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #2acab7; }
+  background: #3e7aee; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5c60bc; }
+  background: #f51463; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b5497c; }
+  background: #ca0811; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #dd54aa; }
+  background: #deac44; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #653db7; }
+  background: #bbbdb5; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a47d7f; }
+  background: #431dd2; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #36092a; }
+  background: #55c3dd; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #fe95b5; }
+  background: #2a46f2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #c2ba62; }
+  background: #fe08ab; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #39dae1; }
+  background: #0877e0; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #918fa8; }
+  background: #356108; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e87832; }
+  background: #353feb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #9d6eae; }
+  background: #571990; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #45a323; }
+  background: #94a476; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f91feb; }
+  background: #0bfb96; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c17f9d; }
+  background: #788ec8; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #23a611; }
+  background: #44e0cf; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c21a7a; }
+  background: #713ea0; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4fa977; }
+  background: #79beea; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c56bf2; }
+  background: #23a441; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c28c78; }
+  background: #82ff0b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a9d63c; }
+  background: #92e9a2; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #22d3c1; }
+  background: #4fb72c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #1df04f; }
+  background: #be5c1e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0bea41; }
+  background: #5b4f29; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #cbc96a; }
+  background: #3cbc9e; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #073360; }
+  background: #465fe5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #73916a; }
+  background: #0dd3e4; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d64c0b; }
+  background: #d03598; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #77dc74; }
+  background: #d7677a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #cba43d; }
+  background: #4a0fbf; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #419e9f; }
+  background: #297902; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ab4cfa; }
+  background: #9a7d25; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0999f6; }
+  background: #02f427; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d2682a; }
+  background: #0ef192; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #77ad9f; }
+  background: #6bcf59; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4c6f27; }
+  background: #d8f25e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1b9b1e; }
+  background: #018e0b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6edec1; }
+  background: #37b9c7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #097f65; }
+  background: #b63825; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b1b6b6; }
+  background: #01ab70; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ae59b0; }
+  background: #a3155c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #381687; }
+  background: #53987d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e19c1e; }
+  background: #710391; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a1fa37; }
+  background: #08801c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #af5d7e; }
+  background: #e996e5; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #57089b; }
+  background: #c99603; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f77980; }
+  background: #b97a84; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #22b64b; }
+  background: #e3b4b7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f62a80; }
+  background: #c55e37; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6f92c0; }
+  background: #338f16; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #04aaea; }
+  background: #bfffde; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #e67a79; }
+  background: #448dc0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ebc780; }
+  background: #a516ff; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #872aba; }
+  background: #6ad2b2; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #6be38d; }
+  background: #b30a51; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10223,12 +10223,14 @@ table .bold-heading {
   background: white;
   padding: 60px 10px; }
 
-.checkbox-with-text-row .label-div {
-  margin-bottom: 10px; }
-.checkbox-with-text-row input {
-  margin-right: 10px; }
-.checkbox-with-text-row input[type='checkbox'] {
-  margin-bottom: 10px; }
+.checkbox-with-text-row {
+  display: flex; }
+  .checkbox-with-text-row .label-div {
+    margin-bottom: 25px; }
+  .checkbox-with-text-row input {
+    margin-right: 10px; }
+  .checkbox-with-text-row input[type='checkbox'] {
+    margin-bottom: 10px; }
 
 .close-section img {
   width: 40px;
@@ -11555,7 +11557,8 @@ input:checked + .sliders:before {
     left: 10px; }
 
 .connector-config-row {
-  border-radius: 15px; }
+  border-radius: 15px;
+  font-size: 14px; }
 
 .add-edit-connection-heading-row .add-edit-heading {
   font-weight: normal !important; }
