--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -807,6 +807,7 @@ input:checked+.sliders:before {
 
 .connector-config-row {
   border-radius: 15px;
+  font-size: 14px;
 }
 
 .add-edit-connection-heading-row .add-edit-heading {
