--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3705,10 +3705,10 @@ table .bold-heading {
 }
 
 .checkbox-with-text-row {
-  // display: flex;
+  display: flex;
 
   .label-div {
-    margin-bottom: 10px;
+    margin-bottom: 25px;
   }
 
   input {
