--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #7a900c; }
+  background: #3a7ecd; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d19707; }
+  background: #6942dd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f8fa52; }
+  background: #fa7103; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b1eed6; }
+  background: #6f8bd6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #212741; }
+  background: #1fd739; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #171c63; }
+  background: #9f19c1; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2afad7; }
+  background: #f4fad6; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3d3439; }
+  background: #032490; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #1d0306; }
+  background: #4e256c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #18d532; }
+  background: #727bdc; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #33ea03; }
+  background: #176623; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #efcbe8; }
+  background: #2e055b; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #75670b; }
+  background: #2568e4; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #9c33bb; }
+  background: #3e32cc; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c3d38a; }
+  background: #22048b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8057c1; }
+  background: #c13706; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #fbbfdc; }
+  background: #24e416; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #dfcab7; }
+  background: #424a3d; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #eecf9f; }
+  background: #fe9327; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #20af51; }
+  background: #a9d734; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #07e93e; }
+  background: #34fa22; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #62a195; }
+  background: #c1c545; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #0bf645; }
+  background: #cb5929; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f1ea21; }
+  background: #67156b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d172e1; }
+  background: #4758c2; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #bdcf32; }
+  background: #dd506d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a2afcf; }
+  background: #93f1a6; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #212b93; }
+  background: #7e117c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #dc73af; }
+  background: #7291bf; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c1c33e; }
+  background: #9dfbf6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #06f689; }
+  background: #ce5f02; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7ddd3c; }
+  background: #96b332; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d6a999; }
+  background: #6d5eb5; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0a529d; }
+  background: #e3dfe0; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #edb5ab; }
+  background: #985416; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c4a5f3; }
+  background: #3af901; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d616cf; }
+  background: #daa970; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #0ff20b; }
+  background: #40f970; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #725a30; }
+  background: #c10789; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6b11b8; }
+  background: #8ce209; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #bc3671; }
+  background: #9664f3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6c1895; }
+  background: #0a5bca; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b00ed6; }
+  background: #7e8d04; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6ba41c; }
+  background: #d4579c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #db6721; }
+  background: #3435c7; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #902359; }
+  background: #1f115f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #dee555; }
+  background: #b658fd; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b0458c; }
+  background: #f09f9d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #9c203d; }
+  background: #15f267; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2a2723; }
+  background: #71b20f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5d9ff5; }
+  background: #759c76; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1d3e57; }
+  background: #fbae79; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #5c7e0d; }
+  background: #67b446; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #683410; }
+  background: #3a21e6; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #05f7be; }
+  background: #aef32e; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #cf1d72; }
+  background: #1621bf; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #34fbd7; }
+  background: #32b240; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a49afb; }
+  background: #8695be; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #964f35; }
+  background: #0a11a0; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c3c292; }
+  background: #444476; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b9f48e; }
+  background: #c868da; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2db110; }
+  background: #d98eb6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #7f9099; }
+  background: #b95ef1; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #651b43; }
+  background: #ddcbb8; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #8e286a; }
+  background: #0e6f06; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c21869; }
+  background: #0104f4; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b613a1; }
+  background: #329723; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #82eb8a; }
+  background: #226255; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #644358; }
+  background: #7925a7; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ddc1e8; }
+  background: #5ad47d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #04a3f7; }
+  background: #67b044; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e4d834; }
+  background: #6ab0f8; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #417333; }
+  background: #cab291; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b77811; }
+  background: #e82242; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #34e2e5; }
+  background: #5903b6; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d3fc05; }
+  background: #794dea; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d07959; }
+  background: #dde9c9; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #9fb97a; }
+  background: #c991dc; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #abe759; }
+  background: #e7f6cd; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ea486d; }
+  background: #07d446; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #dc4d6a; }
+  background: #4297f2; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #717796; }
+  background: #5ac9f8; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #426d1a; }
+  background: #6c471a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #24b075; }
+  background: #8b2d93; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #5f6522; }
+  background: #6391ab; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #862601; }
+  background: #38de27; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #6001bf; }
+  background: #ece190; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #6f90d4; }
+  background: #82d1a7; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a47a54; }
+  background: #e34177; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #14f0e1; }
+  background: #95a90a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2d8f20; }
+  background: #cd327d; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1eeaf3; }
+  background: #4e54f9; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7e3f64; }
+  background: #8239b6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a9d505; }
+  background: #e082a8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #220a61; }
+  background: #c20710; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c6e09f; }
+  background: #dc62e3; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #02d57a; }
+  background: #33d314; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #20ec61; }
+  background: #f33935; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #3ff850; }
+  background: #66fcc3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #f5fb7a; }
+  background: #5a99ff; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10230,7 +10230,8 @@ table .bold-heading {
   .checkbox-with-text-row input {
     margin-right: 10px; }
   .checkbox-with-text-row input[type='checkbox'] {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    height: auto; }
 
 .close-section img {
   width: 40px;
