--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2135,3 +2135,9 @@ td {
 .right-party-row:last-child .right-part-items-div {
   border-bottom: 0px solid #d4d4d4;
 }
+
+.page-heading-breadcrumb a {
+  text-decoration: none;
+  color: #5f5f5f;
+  margin-right: 10px;
+}
