--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #0c07f6; }
+  background: #4d02ec; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #83a393; }
+  background: #3c10e0; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #dc5e5d; }
+  background: #c69b4b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #24e5c6; }
+  background: #084f47; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #19cc16; }
+  background: #3a4aeb; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #14b6d5; }
+  background: #dbef4a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #70b03d; }
+  background: #0c602a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ed51bc; }
+  background: #a0f434; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8e2edf; }
+  background: #f967bd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #6726a8; }
+  background: #502381; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #fa1fa9; }
+  background: #36f34b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5e8493; }
+  background: #a8c5dd; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #08beed; }
+  background: #9862a0; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #f11e14; }
+  background: #a12479; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2b9b1b; }
+  background: #b64945; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3ef129; }
+  background: #b3d33f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ad5d0d; }
+  background: #264fcd; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #39cec6; }
+  background: #86fec6; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b283b6; }
+  background: #9982ec; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4941e4; }
+  background: #1c35b1; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #bc99c0; }
+  background: #c49675; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #2c15db; }
+  background: #21db66; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #731c32; }
+  background: #c6bcd9; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a33244; }
+  background: #52276c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6a94aa; }
+  background: #db46db; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #508fc6; }
+  background: #c5089e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #740cbb; }
+  background: #b284c3; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e9e0de; }
+  background: #a3e071; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8614d7; }
+  background: #c6069b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5473d7; }
+  background: #f3031d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5fce2f; }
+  background: #a47fdc; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e111f7; }
+  background: #fa0f05; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #33fba7; }
+  background: #10d548; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b52d67; }
+  background: #28ae68; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #57e306; }
+  background: #402dde; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #caad2d; }
+  background: #0f1f49; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #b91d48; }
+  background: #b90fc8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #0ec4af; }
+  background: #64cc51; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #1d2503; }
+  background: #15e551; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #beea68; }
+  background: #05dcbc; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #24ea30; }
+  background: #3b099e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9acef0; }
+  background: #99da7c; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #3f4cee; }
+  background: #f3e7bf; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #321cc5; }
+  background: #69b242; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #01e7ba; }
+  background: #27dbbd; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4accfe; }
+  background: #5abfe4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #8c0557; }
+  background: #b919de; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #96a5be; }
+  background: #812648; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #44ab3b; }
+  background: #65cb82; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #fc5e08; }
+  background: #1f20f1; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #d48b86; }
+  background: #554fe0; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b3f8ce; }
+  background: #23269d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #69db0e; }
+  background: #892879; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #19165f; }
+  background: #03389e; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #32a888; }
+  background: #4f9eed; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9e8664; }
+  background: #57c4e1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a3f631; }
+  background: #c5ee6d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cc6560; }
+  background: #d1fb11; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #66bbb4; }
+  background: #dcfba6; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #7418c7; }
+  background: #c9a11d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #2210b0; }
+  background: #99880a; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #71cc02; }
+  background: #7882df; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #926656; }
+  background: #fd1e93; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d0f075; }
+  background: #5b090e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #a82b15; }
+  background: #49d1bb; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #678dcd; }
+  background: #3b8bd5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #9230fc; }
+  background: #061973; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c1eca0; }
+  background: #db2d05; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #95c46a; }
+  background: #e99ddf; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #6a4349; }
+  background: #9ae51b; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #19154d; }
+  background: #9f0a4a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f83f07; }
+  background: #282d59; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #867d56; }
+  background: #6cfbd7; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f249f3; }
+  background: #58962b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #1ddefc; }
+  background: #b13ade; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b2ca2f; }
+  background: #13afca; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #db1b7d; }
+  background: #987490; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #25fe7b; }
+  background: #fd5144; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #44f725; }
+  background: #715972; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #588ebc; }
+  background: #e39491; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #6df49c; }
+  background: #47c0c7; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d58cb7; }
+  background: #e3e1c9; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #97ca03; }
+  background: #b2d4eb; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #72b304; }
+  background: #9f829d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7a8f69; }
+  background: #3bb1d0; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c7d580; }
+  background: #6e5734; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #be119d; }
+  background: #93e061; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #47962d; }
+  background: #3924b3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #450dee; }
+  background: #07bfba; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #76c015; }
+  background: #18524e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2cc997; }
+  background: #fad487; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b77171; }
+  background: #7a5bf5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #3a17e3; }
+  background: #9bc7e3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #330299; }
+  background: #077767; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cee892; }
+  background: #5c0a0f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d1d81e; }
+  background: #859f9b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #1e3c82; }
+  background: #b45f0a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #959daf; }
+  background: #e8150a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #1e6cfc; }
+  background: #af824f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a79cd9; }
+  background: #41ac92; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
